--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Serendipity",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
+	"description": "Opens random, unconnected notes from your vault.",
 	"author": "Mat Allen",
 	"authorUrl": "https://github.com/doomdagadiggiedahdah",
 	"fundingUrl": "https://www.againstmalaria.com/",
